CSS/cStyleSedit.css
/*  color palette  */

/*  RGB  */
$color1: rgba(218, 255, 239, 1);
$color2: rgba(208, 255, 214, 1);
$color3: rgba(213, 226, 188, 1);
$color4: rgba(166, 151, 156, 1);
$color5: rgba(211, 192, 210, 1);

$color1: rgba(208, 255, 249, 1);
$color4: rgba(176, 151, 156, 1);
$color5: rgba(230, 192, 210, 1);

/*  rework  */
$prussianblue: #003049;
$prussianblue2: rgba(6,54,79,0.9);
$dutchwhite: #eae2b7;
$jasper: #d64242; rgba(214, 66, 66, 0.6)
$amaranthred: #d62828;
$maximumyellowred: #fcbf49;
$utorange: #f77f00;
$darkcerulen: #004f7a;
$usafablu: #005482;
$middlegreen: #499f68;
$parisgreen: #52b275;
$silver: #c2c5bb;
$ashgray: #bcbfb5;
$shinyshamrock: #4eaa70;
$iguanagreen: #72aa86;

/*  Global styles  */
html {
  box-sizing: border-box;
}

:root {
  --silver: #a9abad;
  --prussianblue: #003049;
  --darkblue: #004f7a;
  --inter-orange: #fd5200;
  --orange-rgb: rgba(253, 82, 0, 0.36);
  --orange-adj: hsl(19, 100%, 69%);
  --rustic: #af3800;
  --alabaster: #EEEBDD;
  --coffee: rgba(60, 55, 68, 1);
  --coffee-sub: rgba(60, 55, 68, 0.2);
  --coffee-head: #011936 ;
  --background: #859ca0;
  --mango: #fcbf49;
}

*, *:before, *:after {
  box-sizing: inherit;
}

body {
    background-color: var(--background);
    color: black;
    font-family: Garamond, serif;
    font-size: 18px;
    margin: 0;
    }

h1, h2 {
  font-family: Helvetica, sans-serif;
}

h1 {
  font-size: 70px;
}

h2 {
  font-size: 35px;
  margin-top: 0;
  margin-bottom: 0px;
  /* font-style: italic; */
}

h3 {
  margin: 30px 0 0 0;
}

.h-style {
  font-family: Helvetica, sans-serif;
}

h4 {
  margin: 11px auto;
}

p {
  line-height: 1.5;
  margin: 11 0 0 0;
}

h5 {
  margin: 0;
  font-size: 20px;
}

a {
  background: none;
  color: var(--inter-orange);
  /* #ff952b; */
  text-decoration: none;
  text-shadow: 3px 3px 4px black;
}

a:hover {
  font-weight: bolder;
  }

.content-wrap {
  max-width: 950px;
  margin: 0 auto;
  padding: 60px 50px;
  overflow: hidden;
}

.container {
  display: grid;
  grid-template-columns: minmax(250px, 400px) minmax(300px, 1fr);
  grid-gap:10px;
}

.Ucase {
  text-transform: uppercase;
}

/*  Download Button  */
.btn {
  text-decoration: none;
  color: var(--coffee);
  background-color: #72aa86
  display: inline-block;
  padding: 10px;
  text-shadow: none;
}

.btn:hover {
  color: #DEDEDE;
   /* #004f7a; */
  text-shadow: 4px 5px 4px var(--coffee);
  /* 4px 5px 4px #47897D; */
}

/*   Header  */
header {
  font-weight:800;
  padding-top: 50px;
  position: relative;
}

header h1,
header h2 {
  color: var(--coffee-head);
  margin: 0;
}

.heading {
  display: flex;
}

.missions {
  flex-basis: 530px;
}

.profile {
  display: block;
  max-height: 175px;
  max-width: 175px;
  height:auto;
  width:auto;
  border-radius: 55%;
  }

.prof-pic {
  padding-left: 2px;
  padding-right: 2px;
  flex-basis: 270px;
  flex-shrink: 4;
}

.download {
  position: absolute;
  right: 0;
  bottom: 0;
}

/*  Footer  */
footer {
  text-align:center;
  color: var(--silver);
}

#Contact h2 {
  color: var(--coffee);
  /* text-shadow: 3px 3px 3px #bbbbbb; */
}

#Contact p {
  color: var(--coffee);
}

.content-info a {
  color: var(--silver);
  padding: 5px 15px;
  margin-top: 10px;
  margin-right: 15px;
  display: inline-block;
  font-size: 25px;
  box-shadow: 1px 1px 4px var(--coffee);
 }

 .content-info a:hover {
   /* border: 2px dotted black; */
   /* padding: 8px 20px; */
   box-shadow: 3px 3px 8px var(--coffee);
   color: #011936;
 }
 /*   Header and Footer  */
 header, footer {
   background-color: var(--alabaster);
   color: var(--rustic);
}

/*  Navigation  */
nav {
  background-color: var(--silver);
  margin-bottom: 5px;
  text-align: center;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
}

nav a {
  display: inline-block;
  padding: 12px 20px;
  font-weight: bold;
  text-decoration:none;
  text-transform:uppercase;
}

nav a:hover {
  /* text-decoration: line-through; */
  color: var(--orange-adj);
  /* text-shadow: 5px 5px 4px #47897D; */
  /* padding: 14px 22px; */
  background-color: var(--coffee);
}

/*  Work Experience  */
.work {
  background-color: var(--mango);
  background-image: radial-gradient(farthest-side at 83% 21%, rgba(255,255,255,0.9) , #fcbf49 90%);
}

h3 ~ p {
  margin: 0;
}

.job-description {
  margin-bottom: 25px;
}

.job-description p:first-of-type {
  margin-top: 30px;
}

.training {
  margin: 5px auto;
}

#img-ninth {
  margin-left: 25px;
  margin-bottom: 0;
  object-fit: cover;
}

.job-tit {
  font-style: italic;
  font-size: 1.2em;
}

/*  Education  */
.shrink1, .shrink2 {
  margin-top: 15px;
}

.courses {
  margin: 5px auto;
 }

.education {
  background: linear-gradient(rgba(252, 191, 73, 0.18), rgba(253, 82, 0, 0.32)),
  url(../images/mountaintop-education.jpg) no-repeat fixed;
  background-size: cover;
}
/* rgba(214, 66, 66, 0.29) */
p + h3 {
  margin-top: 30px;
}

.tighten {
  margin-top: 17px;
}

.img-att {
  margin-left: 24px;
}

.row {
  display: flex;
  flex-wrap: wrap;
  padding: 0 0;
}

.column {
  flex: 25%;
  max-width: 25%;
  padding: 0 0px;
  flex-wrap: wrap;
}


/* thumbnail hover effects */
.cert-sm {
  border-radius: 2px;
  cursor: pointer;
  transition: 0.2s;
  /* margin-right: 10px; */
  margin-bottom: 10px;
}

.cert-sm:hover {
  opacity: 0.9;
  box-shadow: 0px 0 2px 1px black;
   /* rgba(0, 95, 255, 0.65); */
}

/* The Modal */
.modal1 {
  display: none;
  position: fixed;
  z-index: 1;
  padding-top: 100px;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  overflow: auto;
  background-color: #003049;
}

/* Modal content (image) */
.modal-inner1 {
  margin: auto;
  display: block;
  width: 80%;
  max-width: 700px;
}

.modal-inner2 {
  margin: auto;
  display: block;
  height: 80%;
  max-height: 700px;
}
/* Caption of Modal image */
#caption, #caption2 {
  margin: auto;
  display: block;
  width: 80%;
  max-width: 700px;
  text-align: center;
  color: #ccc;
  padding: 10px 0;
  height: 150px;
}

/* Add Animation */

/* linkedin cert's */
.modal-inner1, .modal-inner2, #caption, #caption2 {
  animation-name: zoom;
  animation-duration: 0.6s;
}

@keyframes zoom {
  from {transform: scale(0.1)}
  to {transform: scale(1)}
}

/* Close Button */
.exit, .exit2 {
  position: absolute;
  top: 20px;
  right: 35px;
  color: #f1f1f1;
  font-size: 55px;
  font-weight: bold;
  transition: 0.3s;
}

.exit:hover, .exit:focus, .exit2:hover, .exit2:focus {
  color: #bbb;
  text-decoration: none;
  cursor: pointer;
  text-shadow: 0 0 2px 1px rgba(200,0,0,0.5);
}


/* Media Queries
-------------*/

@media (min-width: 866px) {
 .col-narrow {
   width:30%;
   float: left;
   margin:0;
}

 .col-wide {
   width: 69%;
   float: left;
   padding-left: 2px;
   margin: 0;
}

 .padding {
   padding-left:241px;
   margin-top:248px;
   margin-left:92px;
 }
}



@media (min-width:976px) {
 .container2 {
   display: grid;
   grid-template-columns: minmax(250px, 400px) minmax(300px, 1fr);
   grid-gap:10px;
   }
}

@media (max-width:975px) {
 .shrink1 {
   margin-top: 19px;
   margin-bottom: 0px;
   }

  .shrink2 {
     margin-top: 0px;
     margin-bottom: 0px;
     }

  .column {
    flex: 50%;
    max-width: 50%;
  }

  .img-att {
    margin-top: 23px;
  }
}

@media (max-width:630px) {
 .container {
   grid-template-columns: 1fr;
  }

  .img-att {
    margin: 0;
    padding: 0;
  }
  .column {
    flex: 25%;
    max-width: 25%;
  }

  .img-att {
    margin-top: 23px;
  }
}

@media(max-width: 800px) {
 .heading {
   flex-wrap: wrap;
   text-align: center;
   justify-content: space-around;
   }

 .prof-pic {
   order: -1;
  }
}

@media (max-width: 903px) {
  .profile {
    max-width: 175px;
  }
}

@media (max-width: 607px) {
  .profile {
    max-width: 150px;
  }
}

@media (max-width: 489px) {
  .profile {
    max-width: 130px;
  }
}

@media (min-width: 725px) {
 .heading {
   flex-wrap: wrap;
   justify-content: flex-start;
   text-align: left;
  }
}

@media (max-width: 725px) {
 .prof-pic {
   max-width: 165px;
  }
}

@media only screen and (max-width: 700px) {
  .modal-inner1 {
    width: 100%;
  }

}

